<resources>
    <string name="app_name">FoodApp</string>

    <string name="find_restaurants">Find Restaurants</string>

    <string name="locate">Locate Me</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="location">Location</string>

    <string name="restaurants">Restaurants</string>
    <string name="orders">Orders</string>
    <string name="info">Info</string>
    <string name="licence">Licence</string>
    <string name="terms">Terms &amp; Conditions</string>

    <string name="open">Open</string>
    <string name="close">close</string>


</resources>
