<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/restaurants"
            android:checked="false"
            android:icon="@drawable/ic_menu_back"
            android:title="@string/find_restaurants" />

        <item
            android:id="@+id/orders"
            android:checked="false"
            android:icon="@drawable/ic_menu_back"
            android:title="@string/orders" />

        <item
            android:id="@+id/info"
            android:checked="false"
            android:icon="@drawable/ic_menu_back"
            android:title="@string/info" />

        <item
            android:id="@+id/terms"
            android:checked="false"
            android:icon="@drawable/ic_menu_back"
            android:title="@string/terms" />

        <item
            android:id="@+id/licence"
            android:checked="false"
            android:icon="@drawable/ic_menu_back"
            android:title="@string/licence" />
    </group>
</menu>